@@ -1,3 +1,8 @@
+2008-07-14  Martyn Russell  <martyn@imendio.com>
+
+	* src/trackerd/tracker-daemon.c: (tracker_daemon_get_services),
+	(tracker_daemon_get_stats): Small code clean ups.
+
 2008-07-04  Ivan Frade  <ivan.frade@nokia.com>
 
 	* src/tracker-indexer/tracker-index.c
